# ModelCrafter

./: .gitignore  .venv  AGENTS.md  CLAUDE.md  DESIGN.md  MakeFile  README.md  ReadMe.md  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml
.github/workflows/: ci.yml
crafter/: crafter.py
linear_models/: ReadMe.md  least_squares.py  performance_assesment.py
model_crafter/: __init__.py  inspect.py  loss.py  penalty.py  solution.py  spec.py
notebooks/: 01_basic_workflow.ipynb  02_temporal_tune_bootstrap.ipynb  OLS_usage.ipynb  _german.py  crafter_naive_usage.ipynb  linreg_prostate_cancer.ipynb
notes/: P0.md  P1.A.md  P1.B.md  P1.INTEG.md  P2.A.md  P2.B.md  P2.C.md  P2.INTEG.md  P3.A.md  P3.B.md  P3.C.md  P3.D.md  P3.INTEG.md  P4.A.md  P4.B.md  P4.C.md  P4.INTEG.md  P5.A.md  P5.B.md  P5.C.md  P5.INTEG.md  P6.INTEG.md  P6.md  maintainability-pass.md  refactor-inventory.md
tests/: conftest.py  test_assumptions.py  test_assumptions_classical.py  test_basis.py  test_binned.py  test_binning_strategies.py  test_bootstrap.py  test_compare.py  test_coordinate.py  test_cross_validate.py  test_data_spliting.py  test_diagnostics.py  test_interact.py  test_irls.py  test_lambda_path.py  test_least_squares.py  test_logistic.py  test_loss.py  test_metrics.py  test_nested_cv.py  test_ols.py  test_penalty.py  test_performance.py  test_performance_by_segment.py  test_performance_over_time.py  test_repr_html.py  test_ridge.py  test_segmented.py  test_solution.py  test_spec.py  test_splitters.py  test_terms.py  test_tune.py  test_woe.py
utils/: data_split.py
(+78 files in other folders)
