[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "model_crafter"
version = "0.0.0"
description = "A Python package for credit risk modeling that feels like pen and paper."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dan" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "statsmodels>=0.14",
    "formulaic>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["model_crafter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: marks tests that take longer than ~1 second (deselect with -m 'not slow')",
]
